Fix #3 - Align file input
File inputs with border look good, without one -- not so good.
That's the best I can do.

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -102,3 +102,7 @@ label > [type="checkbox"],
 label > [type="radio"] {
     margin-right: 0.25rem;
 }
+
+[type="file"] {
+    padding-top: 0.3rem;
+}
